...
    <string name="collapse_ingredients_label">Collapse ingredients</string>
    <string name="no_ingredients_added_label">No ingredients added yet.</string>
    <string name="no_ingredient_selected_label">No ingredient selected</string>
    <string name="remove_label">Remove</string>
    <string name="cancel_label">Cancel</string>
    <string name="close_label">Close</string>
    <string name="save_label">Save</string>
    <string name="servings_value_with_unit">%1$s %2$s</string>
    <string name="detail_amount_value">Amount: %1$s</string>
    <string name="detail_prep_time_value">Prep Time: %1$d min</string>
    <string name="detail_cook_time_value">Cook Time: %1$d min</string>
    <string name="detail_rating_value">Rating: %1$.1f/5</string>
    <string name="manage_library_data_short_label">Ingredients and tags</string>
...
    <string name="ingredient_conversion_unavailable_label">No supported unit conversions are available for this ingredient.</string>
    <string name="ingredient_conversion_reset_label">Reset</string>
    <string name="ingredient_substitution_button_label">Show ingredient substitutions</string>
    <string name="ingredient_substitution_dialog_title">Substitute %1$s</string>
    <string name="ingredient_substitution_unavailable_label">No substitutions are available for this ingredient yet.</string>
    <string name="ingredient_substitutions_section_label">Substitutions</string>
    <string name="add_ingredient_substitution_label">Add substitution</string>
    <string name="add_ingredient_substitution_dialog_title">Add substitution for %1$s</string>
    <string name="edit_ingredient_substitution_dialog_title">Edit substitution for %1$s</string>
    <string name="delete_ingredient_substitution_label">Delete substitution</string>
    <string name="ingredient_substitution_source_label">Source ingredient</string>
    <string name="ingredient_substitution_target_selected_label">Selected substitute</string>
    <string name="ingredient_substitution_target_label">Substitute ingredient</string>
    <string name="ingredient_substitution_ratio_label">Ratio</string>
    <string name="ingredient_substitution_ratio_value_label">Ratio: %1$s</string>
    <string name="ingredient_substitution_risk_label">Risk level</string>
    <string name="ingredient_substitution_scope_label">Dish type scope</string>
    <string name="ingredient_substitution_scope_value_label">Use for: %1$s</string>
    <string name="ingredient_substitution_no_dish_types_label">No dish type tags are available yet.</string>
    <string name="ingredient_substitution_notes_fr_label">Notes (FR)</string>
...
